# discorbot

./: .env.example  Cargo.toml
src/: main.rs
