[package]
name = "disbot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
reqwest =  { version = "0.11.27",features = ["json"] }
